<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical">

    <TextView
            android:id="@+id/goalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="26sp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="522dp">

        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/frequencyLabel" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" tools:text="@string/frequencyLabel"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notificationLabel" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/frequencyLabel" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" tools:text="@string/notificationLabel"/>
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:id="@+id/progressLabel"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                tools:text="@string/progressLabel" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/notificationLabel"/>
        <view android:layout_width="330dp" android:layout_height="242dp"
              class="android.support.v4.widget.DrawerLayout"
              id="@+id/view2" android:id="@+id/graphView" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/progressLabel" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"/>
        <Button
                android:text="Button"
                android:layout_width="106dp"
                android:layout_height="40dp"
                android:id="@+id/button2" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/graphView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" tools:text="@string/Button2"
                tools:background="@android:color/holo_red_dark"/>
        <Button
                android:text="Button"
                android:layout_width="79dp"
                android:layout_height="40dp"
                android:id="@+id/button3" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/graphView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" tools:text="@string/editGoal"
                tools:background="@android:color/holo_orange_light"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
